Version 2.02.90 - 
===================================
  Fix lcov reports when srcdir != builddir.
  Allow ALLOC_NORMAL to track reserved extents for log and data on same PV.
  Automatically detect whether corosync clvmd needs to use confdb or cmap.
  Fix data% report for thin volume used as origin for non-thin snapshot.

Version 2.02.89 - 26th January 2012
===================================
  Add missing check for uname result in clvmd TEST processing.
  Fix memleak in target_version() error path (unsupported LIST_VERSIONS).
  Limit data_alignment and data_alignment_offset to 32bit values.
  Check for correctness of uint64 dev_size value in format_text.
  Thin pools have segment fields thin_count, zero, transaction_id.
  Add data_percent and metadata_percent for thin pools to lvs -v.
  Add data_lv & metadata_lv fields to lvs for thin pools.
  Add data_percent & pool_lv fields to lvs for thin volumes.
  Rename origin_only parm to use_layer for lv_info and use with thin LVs.
  Add lv_thin_pool_transaction_id to read the transaction_id value.
  Use {suspend,resume}_origin_only when up-converting RAID, as mirrors do.
  Always add RAID metadata LVs to deptree (even when origin_only is set).
  Change exclusive LV activation logic to try local node before remote nodes.
  Add CLVMD_FLAG_REMOTE to skip processing on local node.
  Prompt if request is made to remove a snapshot whose "Merge failed".
  Allow removal of an invalid snapshot that was to be merged on next activation.
  Don't allow a user to merge an invalid snapshot.
  Use m and M lv_attr to indicate that a snapshot merge failed in lvs.
  Differentiate between snapshot status of "Invalid" and "Merge failed".
  Report snapshot usage percent of origin volume when a snapshot is merging.
  Require global/lvdisplay_shows_full_device_path for (bogus) lvm1-style paths.
  Do not report linear segtype for non-striped targets.
  Record creation host & time for each LV and report as lv_time & lv_host.