@@ -1,6 +1,7 @@
 [Unit]
 Description=Device-mapper event daemon
-After=fedora-storage-init.service fedora-storage-init-late.service
+Requires=dm-event.socket
+After=dm-event.socket
 Before=local-fs.target
 DefaultDependencies=no
 
