@@ -1,7 +1,7 @@
 [Unit]
 Description=Monitoring of LVM2 mirrors, snapshots etc. using dmeventd or progress polling
 Requires=dm-event.socket
-After=fedora-storage-init.service fedora-storage-init-late.service
+After=dm-event.socket fedora-storage-init.service fedora-storage-init-late.service
 Before=local-fs.target
 DefaultDependencies=no
 Conflicts=shutdown.target
@@ -15,4 +15,3 @@ RemainAfterExit=yes
 
 [Install]
 WantedBy=sysinit.target
-Also=dm-event.socket
